tests/errors/sem_test_13.py
# sem_test13.py 
test = 5
test *= "hey"
print(test)